<resources>

    <string name="app_name">Shop List</string>
    <string name="mensagem_splash">Wait, loading!</string>
    <string name="title_activity_compras">Shop List</string>
    <string name="mnSair">Exit</string>
    <string name="txtDescricao">Description</string>
    <string name="tabCompras">List of Products</string>
    <string name="tabCadastro">Register/Add</string>
    <string name="txtMarca">Brand</string>
    <string name="txtQuantidade">Quantity</string>
    <string name="spnUnidadeMedida">Select unit measure</string>
    <string name="btnSalvar">Save</string>
    <string name="btnLimpar">Clean</string>

    <!-- criando uma lista de unidades de medida -->
    <string-array name="unidades">
        <item>KG</item>
        <item>L</item>
        <item>M</item>
        <item>CX</item>
    </string-array>
    <string name="title_activity_cadastrousuario">User Registration</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtNome">Name</string>
    <string name="edtName">Name</string>
    <string name="txtEmail">Email</string>
    <string name="edtEmail">Email</string>
    <string name="txtLatitude">Latitude</string>
    <string name="edtLatitude">Latitude</string>
    <string name="txtLongitude">Longitude</string>
    <string name="edtLongitude">Longitude</string>
    <string name="txtCadastrousuario">New User</string>
    <string name="mnRemover">Remove</string>
    <string name="mnRemoverTodos">Remove All</string>
    <string name="mnUsuario">Register User</string>
    <string name="mnVoltar">Back</string>
    <string name="title_activity_maps">Map</string>
    <string name="excluirRegistro">Want to delete the records?</string>
    <string name="carregar_usuario">User load!</string>
    <string name="usuario_salvo">User saved successfully!</string>
    <string name="confirmar">Ok</string>
    <string name="recusar">No</string>
    <string name="produtos_excluidos">%s excluded products successfully!</string>
    <string name="erro_excluir_produto">Error deleting products!</string>
    <string name="produto_excluido">Product %s successfully excluded!</string>
    <string name="erro_salvar_produto">Error saving product!</string>
    <string name="produto_salvo">Product saved successfully!</string>

</resources>
