<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.unoesc.shoplist.UsuarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/llImagem">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="90dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imgFoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnFoto"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Foto"
                        android:layout_above="@+id/btnMapa"
                        android:layout_alignLeft="@+id/llCampos"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnMapa"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Mapa"
                        android:layout_above="@+id/llCampos"
                        android:layout_alignStart="@+id/btnFoto"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="341dp"
                android:id="@+id/llCampos"
                android:layout_gravity="bottom"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/txtCadastroUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCadastrousuario"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtNome"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edtNome"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/edtName"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEmail"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtEmail" />

                <TextView
                    android:id="@+id/txtLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtLatitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edtLatitude"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtLatitude" />

                <TextView
                    android:id="@+id/txtLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtLongitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edtLongitude"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtLongitude" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/llBotao"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/btnSalvarUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnSalvar" />

                <Button
                    android:id="@+id/btnLimparCadastroUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnLimpar" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
